--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Config Written Assets
+/[Aa]ssets/background_sprites
+/[Aa]ssets/character_sprites
+/[Aa]ssets/background_sprites.meta
+/[Aa]ssets/character_sprites.meta
+/[Aa]ssets/config.json
+/[Aa]ssets/config.json.meta
